cabal-version: 2.2
name: metric-collector
version: 1.1

library
    default-language: Haskell2010

executable metric-collector
    build-depends:
       base,
       http-client,
       aeson,
       yaml,
       http-conduit,
       bytestring
    default-language: Haskell2010
    main-is: Main.hs

